System can now store and retrieve basic simple timeseries.